examples/type_system/failing/117_if_missing_brace.flx
fn main() -> Unit {
    if true 1 else 2
}
